2004-11-16  Per Bothner  <per@bothner.com>

	* ELisp.java (ELisp): Add defun for '%let'.  Use defProcStFld.

2004-11-10  Per Bothner  <per@bothner.com>

	* ELisp.java (ELisp): Remove definitions of 'and' and 'or'.
	Instead used definitions in kawa.lib.std_syntax.

2004-11-06  Per Bothner  <per@bothner.com>

	* MiscOps.scm (if): Define elisp-specific macro.
	* ELisp.java (<init>): Remove old definition of 'if'.

2004-09-12  Per Bothner  <per@bothner.com>

	* ELisp.java (<init>): ELisp 'if' syntax allows multiple-statement
	else part.

2004-07-20  Per Bothner  <per@bothner.com>

	* ELisp.java:  Use static syntax to access static fields/methods.
	* defcustom.java:  Likewise.
	* SaveExcursion.java:  Remove unused import statements.

2004-02-15  Per Bothner  <per@bothner.com>

	* lambda.java (rewriteBody):  Now need to rewrite default args here.

2004-01-09  Per Bothner  <per@bothner.com>

	* ELisp.java (registerEnvironment):  Update setCurrent to setGlobal.

2003-11-09  Chris Dean  <Chris.Dean@sokitomi.com>

	* ELisp.java (<init>):  Use new string-append implementation.

2003-10-12  Per Bothner  <per@bothner.com>

	* ELisp.java (<init>):  Define function, prog1, prog2 syntax forms.
	* defcustom.java (scanForDefinitions):  Handle Symbols properly.
	* lambda.java (rewruiteBody):  Likewise.

2003-10-08  Per Bothner  <per@bothner.com>

	* ELisp.java (<init>):  Minor simplification/optimization.

	* ELisp.java (getTypeFor):  Fix typo.

2003-05-17  Per Bothner  <per@bothner.com>

	* lambda.java (rewriteBody):  Use getName to test for 'interactive.
	* defcustom.java (scanForDefinitions):  Use getName for Symbols.

2003-02-08  Per Bothner  <per@bothner.com>

	* SaveExcursion.java (<init>):  Fix typo.
	Reported by Knut Wannheden <d96knut@dtek.chalmers.se>.

2002-07-28  Per Bothner  <per@bothner.com>

	* CatchableException.java: New class, extends RuntimeException.
	* Makefile.am (java_sources):  Add CatchableException.java.
	* MiscOps.scm (catch, throw):  New definitions.
